--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -310,25 +310,26 @@
 @media (max-width:599px) {
     .thanking {
         margin-top: 100px;
-        font-size: 15px;
+        font-size: 13px;
+        width: fit-content;
     }
     .Logo42 {
         margin-right: 2%;
         margin-left: 30%;
-        max-width: 150px;
-        max-height: 150px;
+        max-width: 120px;
+        max-height: 120px;
     }
      .Logo1337 {
         margin-right: 1%;
         margin-left: 1%;
-        max-width: 150px;
-        max-height: 150px;
+        max-width: 120px;
+        max-height: 120px;
      }
      .LogoUm6p {
         margin-left: 1%;
-        max-width: 180px;
+        max-width: 150px;
         max-height: 80px;
-        margin-top: 30px;
+        margin-top: 20px;
     }
     
 }
@@ -344,7 +345,7 @@
     }
     .thanking {
         margin-top: 100px;
-        font-size: 17px;
+        font-size: 13px;
     }
     .responsive-image-container {
         margin-left: -30px;
@@ -353,7 +354,7 @@
         margin-right: 2%;
         margin-left: 30%;
         max-width: 120px;
-        max-height: 150px;
+        max-height: 120px;
     }
      .Logo1337 {
         margin-right: 1%;
@@ -363,9 +364,9 @@
      }
      .LogoUm6p {
         margin-left: 1%;
-        max-width: 150px;
+        max-width: 120px;
         max-height: 80px;
-        margin-top: 30px;
+        margin-top: 20px;
     }
     
 }
